--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <div class="logo-descktop">
             <img src="img/logo.png" alt="ArchiTesi">
         </div>
-        <div class="content-header">
+        <div class="content-header home-background">
             <div class="logo">
                 <img src="img/logo.png" alt="ArchiTesi">
             </div>
-            <div class="text-header">
+            <div class="text-header ">
                 <nav class="menu-descktop">
                     <ul>
                         <a href="#aboutus">ABOUT US</a>
@@ -88,7 +88,7 @@
                     <h3>PIAZZA 411 VARISCO</h3>
                     <div class="button btn-projects">
                         <a href="#production">
-                            <p>View our production</p><i class="fas fa-chevron-right"></i>
+                            <p>View project</p><i class="fas fa-chevron-right"></i>
                         </a>
                     </div>
                 </div>                
@@ -98,7 +98,7 @@
                     <h3>RESIDENZA BELLAVISTA</h3>
                     <div class="button btn-projects">
                         <a href="#production">
-                            <p>View our production</p><i class="fas fa-chevron-right"></i>
+                            <p>View project</p><i class="fas fa-chevron-right"></i>
                         </a>
                     </div>
                 </div>
@@ -108,7 +108,7 @@
                     <h3>RESIDENZA TORRI GIUBIASCO</h3>
                     <div class="button btn-projects">
                         <a href="#production">
-                            <p>View our production</p><i class="fas fa-chevron-right"></i>
+                            <p>View project</p><i class="fas fa-chevron-right"></i>
                         </a>
                     </div>
                 </div>
@@ -118,7 +118,7 @@
                     <h3>VARISCO</h3>
                     <div class="button btn-projects">
                         <a href="#production">
-                            <p>View our production</p><i class="fas fa-chevron-right"></i>
+                            <p>View project</p><i class="fas fa-chevron-right"></i>
                         </a>
                     </div>
                 </div>                
@@ -128,7 +128,7 @@
                     <h3>FLORA</h3>
                     <div class="button btn-projects">
                         <a href="#production">
-                            <p>View our production</p><i class="fas fa-chevron-right"></i>
+                            <p>View project</p><i class="fas fa-chevron-right"></i>
                         </a>
                     </div>
                 </div>                
@@ -138,15 +138,14 @@
                     <h3>BROCK TOWER</h3>
                     <div class="button btn-projects">
                         <a href="#production">
-                            <p>View our production</p><i class="fas fa-chevron-right"></i>
+                            <p>View project</p><i class="fas fa-chevron-right"></i>
                         </a>
                     </div>
                 </div>                
             </div>
         </div>
         <div class="button btn-all-projects">
-            <a href="#production">
-                <p>Show all projects</p><i class="fas fa-chevron-right"></i>
+            <a href="projects.html"><p>Show all projects</p><i class="fas fa-chevron-right"></i>
             </a>
         </div>
     </section> 
@@ -181,12 +180,12 @@
             <p><i class="fas fa-at"></i> carra@architesi.ch</p>
             <p><i class="fab fa-whatsapp"></i> +41 91 980 43 03</p>
             <p><i class="fas fa-map-marker-alt"></i> Via Luciano Zuccoli 19, 6900 Paradiso</p>
-        </div>        
-    </section>
-    <footer>
-        <hr>
-        <p>© 2020 ARCHITESI | impresa edile</p>
-        <p>Copyright © 2020 Architesi</p>
-    </footer>    
+        </div> 
+        <footer>
+            <hr>
+            <p>© 2020 ARCHITESI | impresa edile</p>
+            <p>Copyright © 2020 Architesi</p>
+        </footer>       
+    </section>   
 </body>
 </html>
