--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
             <div class="text-header ">
                 <nav class="menu-descktop">
                     <ul>
-                        <a href="#aboutus">ABOUT US</a>
+                        <a href="index.html">ABOUT US</a>
                         <a href="projects.html">PROJECTS</a>
-                        <a href="#production">PRODUCTION</a>
-                        <a href="#contact">CONTACT</a>
+                        <a href="index.html">PRODUCTION</a>
+                        <a href="inde">CONTACT</a>
                     </ul>
                 </nav>
                 <div class="title">
@@ -42,7 +42,7 @@
 				<a href="#aboutus">
                     <div class="parti">
                         <img src="img/icone/aboutus-icon.svg" alt="about us">
-                        <a href="#aboutus">ABOUT US</a>
+                        <a href="index.html">ABOUT US</a>
                     </div>
                 </a>                
 				<a href="project.html">
@@ -54,13 +54,13 @@
 				<a href="#production">
                     <div class="parti">
                         <img src="img/icone/production-icon.svg" alt="produzione">
-                        <a href="#production">PRODUCTION</a>
+                        <a href="#index.html">PRODUCTION</a>
                     </div>
                 </a>
 				<a href="#contact">
                     <div class="parti">
                         <img src="img/icone/contact-icon.svg" alt="contatti">
-                        <a href="#contact">CONTACT</a>
+                        <a href="index.html">CONTACT</a>
                     </div>
                 </a>
 			</div>
@@ -87,7 +87,7 @@
                 <div class="card-text">
                     <h3>PIAZZA 411 VARISCO</h3>
                     <div class="button btn-projects">
-                        <a href="#production">
+                        <a href="Varisco411.html">
                             <p>View project</p><i class="fas fa-chevron-right"></i>
                         </a>
                     </div>
@@ -97,7 +97,7 @@
                 <div class="card-text">
                     <h3>RESIDENZA BELLAVISTA</h3>
                     <div class="button btn-projects">
-                        <a href="#production">
+                        <a href="404.html">
                             <p>View project</p><i class="fas fa-chevron-right"></i>
                         </a>
                     </div>
@@ -107,7 +107,7 @@
                 <div class="card-text">
                     <h3>RESIDENZA TORRI GIUBIASCO</h3>
                     <div class="button btn-projects">
-                        <a href="#production">
+                        <a href="404.html">
                             <p>View project</p><i class="fas fa-chevron-right"></i>
                         </a>
                     </div>
@@ -117,7 +117,7 @@
                 <div class="card-text">
                     <h3>VARISCO</h3>
                     <div class="button btn-projects">
-                        <a href="#production">
+                        <a href="404.html">
                             <p>View project</p><i class="fas fa-chevron-right"></i>
                         </a>
                     </div>
@@ -127,7 +127,7 @@
                 <div class="card-text">
                     <h3>FLORA</h3>
                     <div class="button btn-projects">
-                        <a href="#production">
+                        <a href="#404.html">
                             <p>View project</p><i class="fas fa-chevron-right"></i>
                         </a>
                     </div>
@@ -137,7 +137,7 @@
                 <div class="card-text">
                     <h3>BROCK TOWER</h3>
                     <div class="button btn-projects">
-                        <a href="#production">
+                        <a href="404.html">
                             <p>View project</p><i class="fas fa-chevron-right"></i>
                         </a>
                     </div>
