--- a/Varisco411.html
+++ b/Varisco411.html
@@ -10,7 +10,7 @@
     <title>ArchiTesi</title>
 </head>
 <body>
-    <header id="home">
+    <header id="home" class="bcg-Verisco411">
         <div class="logo-descktop">
             <img src="img/logo.png" alt="ArchiTesi">
         </div>
