--- a/projects.html
+++ b/projects.html
@@ -10,52 +10,70 @@
     <title>ArchiTesi</title>
 </head>
 <body>
-    <header id="projects">
+    <!-- <div class="bg-video-wrap"> 
+        <video src="projects-video.mp4" loop muted autoplay> 
+        </video>
+        <div class="overlay">
+        </div>
+        <nav class="menu-descktop">
+            <ul>
+                <a href="index.html">ABOUT US</a>
+                <a href="projects.html">PROJECTS</a>
+                <a href="index">PRODUCTION</a>
+                <a href="#contact">CONTACT</a>
+            </ul>
+        </nav>
+    </div> -->
+    <header id="home" class="bcg-progect">
         <div class="logo-descktop">
-           <a href="index.html"> <img src="img/logo.png" alt="ArchiTesi"> </a>
+            <img src="img/logo.png" alt="ArchiTesi">
         </div>
-        <div class="bg-video-wrap"> 
-            <video src="img/projects-video.mp4" loop muted autoplay>
-            </video>
-            <div class="overlay">
+        <div class="content-header project-background">
+            <div class="dark-shadow">
+                <div class="logo">
+                    <img src="img/logo.png" alt="ArchiTesi">
+                </div>   
+                <div class="text-header ">
+                    <nav class="menu-descktop single-project">
+                        <ul>
+                            <a href="index.html">ABOUT US</a>
+                            <a href="projects.html">PROJECTS</a>
+                            <a href="index.html">PRODUCTION</a>
+                            <a href="index.html">CONTACT</a>
+                        </ul>
+                    </nav>                
+                </div>
+                <div class="menu">
+                    <a href="#aboutus">
+                        <div class="parti">
+                            <img src="img/icone/aboutus-icon.svg" alt="about us">
+                            <a href="index.html">ABOUT US</a>
+                        </div>
+                    </a>                
+                    <a href="project.html">
+                        <div class="parti">
+                            <img src="img/icone/projects-icon.svg" alt="progetti">
+                            <a href="projects.html">PROJECTS</a>
+                        </div>
+                    </a>                
+                    <a href="#production">
+                        <div class="parti">
+                            <img src="img/icone/production-icon.svg" alt="produzione">
+                            <a href="index.html">PRODUCTION</a>
+                        </div>
+                    </a>
+                    <a href="#contact">
+                        <div class="parti">
+                            <img src="img/icone/contact-icon.svg" alt="contatti">
+                            <a href="index.html">CONTACT</a>
+                        </div>
+                    </a>
+                </div>
             </div>
-            <nav class="menu-descktop">
-                <ul>
-                    <a href="index.html">ABOUT US</a>
-                    <a href="projects.html">PROJECTS</a>
-                    <a href="index">PRODUCTION</a>
-                    <a href="#contact">CONTACT</a>
-                </ul>
-            </nav>
-          </div>
-          <div class="menu">
-            <a href="#aboutus">
-                <div class="parti">
-                    <img src="img/icone/aboutus-icon.svg" alt="about us">
-                    <a href="index.html">ABOUT US</a>
-                </div>
-            </a>                
-            <a href="project.html">
-                <div class="parti">
-                    <img src="img/icone/projects-icon.svg" alt="progetti">
-                    <a href="projects.html">PROJECTS</a>
-                </div>
-            </a>                
-            <a href="#production">
-                <div class="parti">
-                    <img src="img/icone/production-icon.svg" alt="produzione">
-                    <a href="index.html">PRODUCTION</a>
-                </div>
-            </a>
-            <a href="#contact">
-                <div class="parti">
-                    <img src="img/icone/contact-icon.svg" alt="contatti">
-                    <a href="index.html">CONTACT</a>
-                </div>
-            </a>
         </div>
-    </div>        
-    </header> 
+    </header>
+            
+
 
 
 
