--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="img/logo.png">
-    <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css">
+    <link rel="stylesheet" href="Fontawesome/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>ArchiTesi</title>
 </head>
 <body>
-    <header id="home">
+    <header id="home" class="img-index-mobile">
         <div class="logo-descktop">
             <img src="img/logo.png" alt="ArchiTesi">
         </div>
@@ -21,10 +21,10 @@
             <div class="text-header ">
                 <nav class="menu-descktop">
                     <ul>
-                        <a href="index.html">ABOUT US</a>
+                        <a href="#aboutus">ABOUT US</a>
                         <a href="projects.html">PROJECTS</a>
-                        <a href="index.html">PRODUCTION</a>
-                        <a href="inde">CONTACT</a>
+                        <a href="#production">PRODUCTION</a>
+                        <a href="#contact">CONTACT</a>
                     </ul>
                 </nav>
                 <div class="title">
