--- a/Varisco411.html
+++ b/Varisco411.html
@@ -30,7 +30,7 @@
                     </nav>                
                 </div>
                 <div class="menu">
-                    <a href="#aboutus">
+                    <a href="index-html"></a>
                         <div class="parti">
                             <img src="img/icone/aboutus-icon.svg" alt="about us">
                             <a href="index.html">ABOUT US</a>
@@ -42,13 +42,13 @@
                             <a href="projects.html">PROJECTS</a>
                         </div>
                     </a>                
-                    <a href="#production">
+                    <a href="index.html">
                         <div class="parti">
                             <img src="img/icone/production-icon.svg" alt="produzione">
                             <a href="index.html">PRODUCTION</a>
                         </div>
                     </a>
-                    <a href="#contact">
+                    <a href="index.html">
                         <div class="parti">
                             <img src="img/icone/contact-icon.svg" alt="contatti">
                             <a href="index.html">CONTACT</a>
@@ -59,14 +59,14 @@
         </div>
     </header>            
     <section class="project-introduction">
-        <p>Project name : <b>Pazza Varisco 411</b></p>
+        <p>Project name : <b>Piazza Varisco 411</b></p>
         <p>Years : <b>2019</b></p>
         <p>Address : <b>Svizzera, Lugano, Paradiso</b></p>
     </section>
 
     <!-- START ROW IMAGE  -->
     <section class="singleProjects-photos">
-        <h3>HISTORI OF THE PROJECTS</h3>
+        <h3>HISTORY OF THE PROJECTS</h3>
         <div class="row">
             <div class="column">
                 <img src="img/Piazza-411-Varisco/Piante-appartamenti/Appartamento1.png" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -197,6 +197,6 @@
         </footer>       
     </section>   
 
-    <script src="slide.js"></script>
+    <script src="js/slide.js"></script>
 </body>
 </html>
