--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="img/logo.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
     <link rel="stylesheet" href="Fontawesome/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -28,7 +30,7 @@
                     </ul>
                 </nav>
                 <div class="title">
-                    <h1>THE FUTURE OF SWITZERLAND <br> 
+                    <h1 class="animate__animated animate__bounce">THE FUTURE OF SWITZERLAND <br> 
                         IN OUR HANDS 
                     </h1>
                     <div class="button btn-header">
@@ -42,7 +44,7 @@
 				<a href="#aboutus">
                     <div class="parti">
                         <img src="img/icone/aboutus-icon.svg" alt="about us">
-                        <a href="index.html">ABOUT US</a>
+                        <a href="#aboutus">ABOUT US</a>
                     </div>
                 </a>                
 				<a href="project.html">
@@ -54,13 +56,13 @@
 				<a href="#production">
                     <div class="parti">
                         <img src="img/icone/production-icon.svg" alt="produzione">
-                        <a href="#index.html">PRODUCTION</a>
+                        <a href="#production">PRODUCTION</a>
                     </div>
                 </a>
 				<a href="#contact">
                     <div class="parti">
                         <img src="img/icone/contact-icon.svg" alt="contatti">
-                        <a href="index.html">CONTACT</a>
+                        <a href="#contact">CONTACT</a>
                     </div>
                 </a>
 			</div>
@@ -186,6 +188,8 @@
             <p>© 2020 ARCHITESI | impresa edile</p>
             <p>Copyright © 2020 Architesi</p>
         </footer>       
-    </section>   
+    </section> 
+    
+    
 </body>
 </html>
