--- a/projects.html
+++ b/projects.html
@@ -44,7 +44,7 @@
                     </nav>                
                 </div>
                 <div class="menu">
-                    <a href="#aboutus">
+                    <a href="index.html">
                         <div class="parti">
                             <img src="img/icone/aboutus-icon.svg" alt="about us">
                             <a href="index.html">ABOUT US</a>
@@ -56,13 +56,13 @@
                             <a href="projects.html">PROJECTS</a>
                         </div>
                     </a>                
-                    <a href="#production">
+                    <a href="index.html">
                         <div class="parti">
                             <img src="img/icone/production-icon.svg" alt="produzione">
                             <a href="index.html">PRODUCTION</a>
                         </div>
                     </a>
-                    <a href="#contact">
+                    <a href="index.html">
                         <div class="parti">
                             <img src="img/icone/contact-icon.svg" alt="contatti">
                             <a href="index.html">CONTACT</a>
