--- a/Varisco411.html
+++ b/Varisco411.html
@@ -68,49 +68,49 @@
     <section class="singleProjects-photos">
         <h3>HISTORY OF THE PROJECTS</h3>
         <div class="row">
-            <div class="column">
+            <div class="column fade-in">
                 <img src="img/Piazza-411-Varisco/Piante-appartamenti/Appartamento1.png" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
             </div>
-            <div class="column">
+            <div class="column fade-in">
               <img src="img/Piazza-411-Varisco/Piante-appartamenti/Appartamento2.png" style="width:100%" onclick="openModal();currentSlide(2)" class="hover-shadow cursor">
           </div>
-          <div class="column">
+          <div class="column fade-in">
             <img src="img/Piazza-411-Varisco/Piante-appartamenti/Appartamento3.png" style="width:100%" onclick="openModal();currentSlide(3)" class="hover-shadow cursor">
           </div>
-          <div class="column">
+          <div class="column fade-in">
             <img src="img/Piazza-411-Varisco/Piante-appartamenti/Appartamento4.png" style="width:100%" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
           </div>
-          <div class="column">
+          <div class="column fade-in">
             <img src="img/Piazza-411-Varisco/Piante-appartamenti/Appartamento5.png" style="width:100%" onclick="openModal();currentSlide(5)" class="hover-shadow cursor">
           </div>
-          <div class="column">
+          <div class="column fade-in">
             <img src="img/Piazza-411-Varisco/Piante-appartamenti/Appartamento6.png" style="width:100%" onclick="openModal();currentSlide(6)" class="hover-shadow cursor">
           </div>
-          <div class="column">
+          <div class="column fade-in">
             <img src="img/Piazza-411-Varisco/Piante-appartamenti/Attico1.png" style="width:100%" onclick="openModal();currentSlide(7)" class="hover-shadow cursor">
           </div>
-          <div class="column">
+          <div class="column fade-in">
             <img src="img/Piazza-411-Varisco/Piante-appartamenti/Attico2.png" style="width:90%" onclick="openModal();currentSlide(8)" class="hover-shadow cursor">
           </div>
-          <div class="column">
+          <div class="column fade-in">
             <img src="img/Piazza-411-Varisco/scala/scala-appertamenti.png " style="width:100%" onclick="openModal();currentSlide(9)" class="hover-shadow cursor">
           </div>
-          <div class="column">
+          <div class="column fade-in">
             <img src="img/Piazza-411-Varisco/render/render1.jpg" style="width:100%" onclick="openModal();currentSlide(10)" class="hover-shadow cursor">
           </div>
-          <div class="column">
+          <div class="column fade-in">
             <img src="img/Piazza-411-Varisco/render/render3.png" style="width:95%" onclick="openModal();currentSlide(11)" class="hover-shadow cursor">
           </div>
-          <div class="column">
+          <div class="column fade-in">
             <img src="img/Piazza-411-Varisco/render/render4.png" style="width:90%" onclick="openModal();currentSlide(12)" class="hover-shadow cursor">
           </div>
-          <div class="column">
+          <div class="column fade-in">
             <img src="img/Piazza-411-Varisco/render/render6.png" style="width:100%" onclick="openModal();currentSlide(13)" class="hover-shadow cursor">
           </div>
-          <div class="column">
+          <div class="column fade-in">
             <img src="img/Piazza-411-Varisco/render/render7.png" style="width:100%" onclick="openModal();currentSlide(14)" class="hover-shadow cursor">
           </div>
-          <div class="column">
+          <div class="column fade-in">
             <img src="img/Piazza-411-Varisco/render/Vista-serale-piazza.png" style="width:90%" onclick="openModal();currentSlide(15)" class="hover-shadow cursor">
           </div>
           
@@ -196,7 +196,7 @@
             <p>Copyright © 2020 Architesi</p>
         </footer>       
     </section>   
-
+    <script src="js/effect-scroll.js"></script>
     <script src="js/slide.js"></script>
 </body>
 </html>
