--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <a href="#aboutus">ABOUT US</a>
                     </div>
                 </a>                
-				<a href="project.html">
+				<a href="projects.html">
                     <div class="parti">
                         <img src="img/icone/projects-icon.svg" alt="progetti">
                         <a href="projects.html">PROJECTS</a>
