--- a/Varisco411.html
+++ b/Varisco411.html
@@ -36,7 +36,7 @@
                             <a href="index.html">ABOUT US</a>
                         </div>
                     </a>                
-                    <a href="project.html">
+                    <a href="projects.html">
                         <div class="parti">
                             <img src="img/icone/projects-icon.svg" alt="progetti">
                             <a href="projects.html">PROJECTS</a>
